--- a/src/app/slides/title.html
+++ b/src/app/slides/title.html
@@ -4,9 +4,8 @@
       <div class="top">
         <div class="content">
           <div class="logo">
-            <img src="assets/images/ETka-Logo-30px.png" alt="Logo Karlsruher Entwicklertag 2014" style="height: 2.5em;">
+            <img src="assets/images/ET_Ka2014-Logo_mini_white.svg" alt="Logo Karlsruher Entwicklertag 2014" style="height: 8em;">
           </div>
-          <h1><small>Karlsruher Entwicklertag 2014</small></h1>
         </div>
       </div>
     </div>
