--- a/src/app/slides/about-me.html
+++ b/src/app/slides/about-me.html
@@ -1,12 +1,16 @@
-<div class="slide about-me">
-  <div class="header">
-    <h2>About Me</h2>
+<div class="slide about-me centered">
+  <div>
+    <div class="header">
+      <h2>About Me</h2>
+    </div>
+    <div class="content">
+      <h3>Philipp Burgmer</h3>
+      <ul>
+        <li>Software Engineer / Consultant / Trainer</li>
+        <li>WeigleWilczek GmbH</li>
+        <li><a href="mailto:burgmer@w11k.com" target="_blank">burgmer@w11k.com</a></li>
+        <li>Focus: Frontend, Web Technologies</li>
+      </ul>
+    </div>
   </div>
-  <h3>Philipp Burgmer</h3>
-  <ul>
-    <li>Software Engineer / Consultant / Trainer</li>
-    <li>WeigleWilczek GmbH</li>
-    <li><a href="mailto:burgmer@w11k.com" target="_blank">burgmer@w11k.com</a></li>
-    <li>Focus: Frontend, Web Technologies</li>
-  </ul>
 </div>
