--- a/src/app/slides/about-us.html
+++ b/src/app/slides/about-us.html
@@ -1,16 +1,20 @@
-<div class="slide about-us">
-  <div class="header">
-    <h2>About Us</h2>
+<div class="slide about-us centered">
+  <div>
+    <div class="header">
+      <h2>About Us</h2>
+    </div>
+    <div class="content">
+      <h3>WeigleWilczek / W11k</h3>
+      <ul>
+        <li>Software Design, Development & Maintenance</li>
+        <li>Consulting</li>
+        <li>Trainings & Coaching</li>
+      </ul>
+      <ul>
+        <li>Web Applications with AngularJS</li>
+        <li>Native Rich Clients with Eclipse RCP</li>
+        <li>Java / JVM</li>
+      </ul>
+    </div>
   </div>
-  <h3>WeigleWilczek / W11k</h3>
-  <ul>
-    <li>Software Design, Development & Maintenance</li>
-    <li>Consulting</li>
-    <li>Trainings & Coaching</li>
-  </ul>
-  <ul>
-    <li>Web Applications / AngularJS</li>
-    <li>Eclipse RCP</li>
-    <li>Java / JVM</li>
-  </ul>
 </div>
