--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,5 @@
+@import "compass";
+
 // ****************************************************************************************************
 // general
 // ****************************************************************************************************
@@ -67,59 +69,84 @@ $titleBottomBackgroundColor: transparent;
 
   padding: 0;
 
-  > div {
-    display: table;
-    width: 100%;
-    height: 100%;
+  .top {
+    position: relative;
+    height: 38.2%;
+    text-align: center;
+    color: $titleTopTextColor;
+    background-color: $titleTopBackgroundColor;
+    padding: 0 2em;
 
-    > div {
-      display: table-row;
+    .content {
+      position: relative;
+      top: 61.8%;
+      @include transform(translateY(-61.8%));
+      text-align: center;
 
-      .top {
-        display: table-cell;
-        height: 38.2%;
-        text-align: center;
+      h1 {
+        margin: 0;
         color: $titleTopTextColor;
-        background-color: $titleTopBackgroundColor;
-        padding: 0 2em;
-
-        .content {
-          position: relative;
-          top: 50%;
-          text-align: center;
-
-          h1 {
-            margin: 0;
-            color: $titleTopTextColor;
-            small {
-              color: $titleTopTextColor;
-            }
-          }
-        }
-      }
-
-      .bottom {
-        display: table-cell;
-        height: 61.8%;
-        border-top: 0.3em solid $titleSeparatorColor;
-        background-color: $titleBottomBackgroundColor;
-        padding: 0 2em;
-        h1 {
-          margin: 0;
-          color: $titleBottomTextColor;
-          small {
-            color: $titleBottomTextColor;
-          }
-        }
-
-        .content {
-          position: relative;
-          top: 38.2%;
-          text-align: center;
+        small {
+          color: $titleTopTextColor;
         }
       }
     }
+  }
 
+  .bottom {
+    position: relative;
+    height: 61.8%;
+    border-top: 0.3em solid $titleSeparatorColor;
+    background-color: $titleBottomBackgroundColor;
+    padding: 0 2em;
+
+    .content {
+      position: relative;
+      top: 38.2%;
+      @include transform(translateY(-38.2%));
+      text-align: center;
+
+      h1 {
+        margin: 0;
+        color: $titleBottomTextColor;
+        small {
+          color: $titleBottomTextColor;
+        }
+      }
+    }
+  }
+}
+
+.slide.centered {
+  @include vcenter;
+
+  > div {
+    display: inline-block;
+    margin: auto;
+    text-align: left;
+
+    .header {
+      background: none;
+      border: 0;
+
+      margin: 0 0 1.5em;
+      padding: 0 0.5em;
+
+      h2 {
+        text-align: center;
+        color: $primaryColor;
+        text-transform: uppercase;
+      }
+
+      h2:after {
+        display: none;
+      }
+    }
+
+    h3 {
+      color: inherit;
+      padding-left: 0.77em;
+    }
   }
 }
 
