--- a/src/app/slides/title.html
+++ b/src/app/slides/title.html
@@ -1,23 +1,21 @@
 <div class="slide title">
-  <div>
-    <div>
-      <div class="top">
-        <div class="content">
-          <div class="logo">
-            <img src="assets/images/ET_Ka2014-Logo_mini_white.svg" alt="Logo Karlsruher Entwicklertag 2014" style="height: 8em;">
-          </div>
-        </div>
+  <div class="top">
+    <div class="content">
+      <div class="logo">
+        <img src="assets/images/ET_Ka2014-Logo_mini_white.svg" alt="Logo Karlsruher Entwicklertag 2014" style="height: 8em;">
       </div>
     </div>
-    <div>
-      <div class="bottom">
-        <div class="content">
-          <h1>
-            Grunt & fabs<br>
-            <small>Moderner Build und Workflow für moderne Web-Anwendungen</small>
-          </h1>
-        </div>
-      </div>
+  </div>
+  <div class="bottom">
+    <div class="content">
+      <h1>
+        <small>
+        Grunt, Gulp, Broccoli & fabs
+        </small><br>
+        <br>
+        Build-System und Development-Workflow<br>
+        für moderne Web-Anwendungen
+      </h1>
     </div>
   </div>
 </div>
