--- a/src/app/slides/about-us.html
+++ b/src/app/slides/about-us.html
@@ -5,15 +5,15 @@
     </div>
     <div class="content">
       <h3>WeigleWilczek / W11k</h3>
+
       <ul>
         <li>Software Design, Development & Maintenance</li>
-        <li>Consulting</li>
-        <li>Trainings & Coaching</li>
+        <li>Consulting, Trainings & Project Kickoff</li>
       </ul>
+
       <ul>
         <li>Web Applications with AngularJS</li>
         <li>Native Rich Clients with Eclipse RCP</li>
-        <li>Java / JVM</li>
       </ul>
     </div>
   </div>
