--- a/src/app/slides/meet-the-speaker.html
+++ b/src/app/slides/meet-the-speaker.html
@@ -1,4 +1,4 @@
-<div class="slide titled title">
+<div class="slide titled meet-the-speaker">
   <div class="top">
     <div class="content">
       <div class="logo">
@@ -8,14 +8,9 @@
   </div>
   <div class="bottom">
     <div class="content">
-      <h1>
-        <small>
-        Grunt, Gulp, Broccoli & fabs
-        </small><br>
-        <br>
-        Build-System and Development-Workflow<br>
-        for modern Web-Applications
-      </h1>
+      <h2>Meet The Speaker</h2>
+      @ Speaker Lounge<br>
+      1. OG direkt über dem Empfang
     </div>
   </div>
 </div>
