finishes slides for Entwicklertag 2014

--- a/src/app/slides/conclusion.html
+++ b/src/app/slides/conclusion.html
@@ -7,11 +7,12 @@
     </div>
     <div class="content">
       <ul>
-        <li>A Lot of Small Tools, Each for a Specific Task</li>
-        <li>Difficult to Keep Track of All These Tools</li>
+        <li>A Lot of Small Tools / Plugins, Each for a Specific Task</li>
+        <li>Difficult to Keep Track of All These Tools / Plugins</li>
         <li>No De-Facto Standard Build Tool like Maven for Java</li>
         <li>Impossible to Write One for All Web-Apps</li>
         <li>fabs for AngularJS Applications</li>
+        <li>Working on a Gulp Port of fabs</li>
       </ul>
     </div>
   </div>
