--- a/src/app/slides/fabs/demo.html
+++ b/src/app/slides/fabs/demo.html
@@ -3,5 +3,13 @@
     <div class="header">
       <h2>Demo</h2>
     </div>
+    <div class="content">
+      <ul>
+        <li><a href="https://github.com/w11k/fabs-boilerplate">fabs-boilerplate</a></li>
+        <li>This Presentation</li>
+        <li>Real World Project</li>
+        <li><a href="https://github.com/w11k/fabs">fabs</a></li>
+      </ul>
+    </div>
   </div>
 </div>
