--- a/src/app/slides/perspective/gulp.html
+++ b/src/app/slides/perspective/gulp.html
@@ -1,10 +1,19 @@
 <div class="slide perspective-gulp centered">
   <div>
     <div class="header">
-      <h2>Gulp.JS</h2>
+      <h2>
+        <img src="assets/images/gulp.svg" alt="Gulp.JS Logo" style="height: 4em; margin-bottom: 0.5em"/><br>
+        Gulp.JS
+      </h2>
     </div>
     <div class="content">
-      <img src="assets/images/gulp.svg" alt="Gulp.JS Logo"/>
+      <ul>
+        <li><a href="http://gulpjs.com" target="_blank">gulpjs.com</a></li>
+        <li>Uses Streams Instead fo Temp Files</li>
+        <li>Code Over Configuration</li>
+        <li>Node Package: Install with <code>npm install -g gulp</code></li>
+        <li>Plugins Are Regular Node Packages</li>
+      </ul>
     </div>
   </div>
 </div>
