--- a/src/app/slides/step-one/bower-usage.html
+++ b/src/app/slides/step-one/bower-usage.html
@@ -21,8 +21,8 @@
 </pre>
         </li>
         <li>Download Dependencies via <code>bower install</code></li>
-        <li>Problem: bower Does Not Manage Inclusion</li>
-        <li>Hint: Use Fixed Versions for a Project and Variable for a Library</li>
+        <li>Half the Problem Remains: bower Does Not Manage Inclusion</li>
+        <li>Hint: Use Fixed Versions Within a Project and Variable Within a Library</li>
       </ul>
     </div>
   </div>
