--- a/src/app/slides/step-one/grunt-installation.html
+++ b/src/app/slides/step-one/grunt-installation.html
@@ -9,10 +9,11 @@
     <div class="content">
       <ul>
         <li>Command Line Tool</li>
+        <li>Lets You Automate Almost Everything</li>
         <li>Split into 2 Node Packages</li>
-        <li>Install Binary globally via <code>npm install -g grunt-cli</code></li>
-        <li>Define project specific version in <code>package.json</code></li>
-        <li>Install locally via <code>npm install</code></li>
+        <li>Install Binary Globally via <code>npm install -g grunt-cli</code></li>
+        <li>Define Dependency to Project Specific Version in <code>package.json</code></li>
+        <li>Install Locally via <code>npm install</code></li>
       </ul>
     </div>
   </div>
