--- a/src/app/slides/step-one/problems.html
+++ b/src/app/slides/step-one/problems.html
@@ -6,10 +6,10 @@
     <div class="content">
       <ul>
         <li>Manage Dependencies to 3th Party Libraries<br>(Versioning, Conflicts, Download and Inclusion)</li>
-        <li>Include Own JavaScript Files</li>
+        <li>Include Own JavaScript and CSS Files</li>
         <li>Structure and Modularize Code</li>
         <li>Too Much Overhead During Development</li>
-        <li>Find Even Simple Errors at Runtime Only</li>
+        <li>Find Even Simple Errors Only at Runtime</li>
       </ul>
     </div>
   </div>
