--- a/src/app/slides/perspective/gulp.html
+++ b/src/app/slides/perspective/gulp.html
@@ -10,6 +10,7 @@
       <ul>
         <li><a href="http://gulpjs.com" target="_blank">gulpjs.com</a></li>
         <li>Uses Streams Instead fo Temp Files</li>
+        <li>Runs Independent Tasks 'Parallel'</li>
         <li>Code Over Configuration</li>
         <li>Node Package: Install with <code>npm install -g gulp</code></li>
         <li>Plugins Are Regular Node Packages</li>
