--- a/src/app/slides/title.html
+++ b/src/app/slides/title.html
@@ -10,7 +10,7 @@
     <div class="content">
       <h1>
         <small>
-        Grunt, Gulp, Broccoli & fabs
+        Grunt, Gulp & fabs
         </small><br>
         <br>
         Build-System and Development-Workflow<br>
