fixes meet the speaker slide in german

--- a/src/app/slides/meet-the-speaker.html
+++ b/src/app/slides/meet-the-speaker.html
@@ -10,7 +10,7 @@
     <div class="content">
       <h2>Meet The Speaker</h2>
       @ Speaker Lounge<br>
-      1. OG direkt über dem Empfang
+      Second Floor Directly About Reception
     </div>
   </div>
 </div>
